...

                Text(title)
                    .font(.title2.weight(.semibold))
                    .foregroundColor(Color(designSystemColor: .textPrimary))
                    .multilineTextAlignment(.center)
                    .fixedSize(horizontal: false, vertical: true)
                    .accessibilityIdentifier("SyncSuccessTitle")

                Text(UserText.syncSuccessDescription)
                    .font(.body)
                    .foregroundColor(Color(designSystemColor: .textPrimary))
                    .multilineTextAlignment(.center)
                    .fixedSize(horizontal: false, vertical: true)
...
        } buttons: {
            Spacer()
            Button(UserText.done) {
                model.delegate?.syncSuccessDonePressed()
            }
            .buttonStyle(DefaultActionButtonStyle(enabled: true, stateColors: .themedActionButton))
            .accessibilityIdentifier("SyncSuccessDoneButton")
        }
        .onAppear {
            model.delegate?.syncSuccessViewDidAppear()
        }
    }

...
