...
        guard let presenter = UIApplication.shared.firstKeyWindow?.rootViewController?.topPresentedViewController else { return }

        let alert = UIAlertController(
            title: "\"DuckDuckGo\" Would Like to Add VPN Configurations",
            message: "All network activity on this iPhone may be filtered or monitored when using VPN.",
            preferredStyle: .alert)
        let allow = UIAlertAction(title: "Allow", style: .default) { _ in tapAllowHint.hide() }
        alert.addAction(allow)
        alert.addAction(UIAlertAction(title: "Don't Allow", style: .default) { _ in tapAllowHint.hide() })
        alert.preferredAction = allow

        tapAllowHint.show()
        presenter.present(alert, animated: true)
...
