...
        snapshots.previews
    }

    static let snapshots = PreviewSnapshots<State>(
        configurations: [
            .init(name: "Scan Code", state: .scanCode),
            .init(name: "Enter Code", state: .enterCode)
        ],
        configure: { state in
            let sampleCode = "eyJyZWNvdmVyeSI6eyJ1c2VyX2lkIjoiNjgwRDQ1QjUtNUU2RS00MzQ3LTlDNDQtQjZGQkU4MEZDNEE3IiwicHJpbWFyeV9rZXkiOiJBQkNERUZHSElKS0xNTk9QUVJTVFVWV1hZWiJ9fQ=="
            let tab: SyncSetupTab = state == .scanCode ? .scanCode : .enterCode

            return SyncWithAnotherDeviceView(
...
